--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -4,7 +4,8 @@ body {
   text-align: center;
 }
 
-h1{font-size: 40px;
+h1{
+  font-size: 2em;
   letter-spacing: 1.2em;
   text-shadow: 3px 3px 5px rgb(36, 110, 150);
   border-bottom: solid 3px rgb(115, 115, 114) ;
@@ -14,7 +15,7 @@ h1{font-size: 40px;
 
 .pink{color: pink;}
 
-p {
+.google-fonts {
   /* ここにGoogle Fontsを指定します */
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
