--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -1,11 +1,10 @@
 body {
   font-family:"Arial", "Meiryo", sans-serif;
-  font-size: 20px;
   text-align: center;
 }
 
 h1{
-  font-size: 2em;
+  font-size: 2rem;
   letter-spacing: 1.2em;
   text-shadow: 3px 3px 5px rgb(36, 110, 150);
   border-bottom: solid 3px rgb(115, 115, 114) ;
