--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -65,7 +65,7 @@
   width: 400px;
   height: 100px;
   background-color: #e5dcf0;
-  position: absolute;
+  position: relative;
   left: 200px;
 
 }
@@ -74,7 +74,6 @@
   width: 400px;
   height: 100px;
   background-color: #e5dcf0;
-  position: absolute;
-  top:200px;
+  position: relative;
   left: 400px;
 }
